<resources>
    <string name="app_name">매일영어</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="hello">Hello!</string>
    <string name="how_to_title">[<b>매일 영어</b>] 입니다."</string>
    <string name="notice">알림</string>
    <string name="saved_word">단어가 저장 되었습니다.</string>
    <string name="already_saved_word">이미 저장되어 있는 단어입니다.</string>
    <string name="review_saved_word">영어단어 복습하기</string>
    <string name="mypage_title">앱을 삭제 하거나 앱 데이터를 지우면 저장 된 단어들이 사라집니다.</string>

    <string name="today_word_01">"Today's Word [1/3]"</string>
    <string name="today_word_02">"Today's Word [2/3]"</string>
    <string name="today_word_03">"Today's Word [3/3]"</string>
    <string name="open_time_01">다음 단어는 점심 12:00에 노출 됩니다.</string>
    <string name="open_time_02">다음 단어는 저녁 06:00에 노출 됩니다.</string>
    <string name="open_time_03">다음 단어는 아침 07:00에 노출 됩니다.</string>

    <string name="how_to_dialog_01">매일 새로운 영어 단어를 외울 수 있습니다.</string>
    <string name="how_to_dialog_02">하루 총 3단어와 9개의 회화를 제공합니다.</string>
    <string name="how_to_dialog_09">영어 단어가 새로나오면 알림을 통해 알려드려요.</string>
    <string name="how_to_dialog_10">설정 -> 알림설정 (on/off)</string>
    <string name="how_to_dialog_11">모르는 단어와 회화는 읽어주는 기능까지!</string>
    <string name="how_to_dialog_12">목소리 설정 필수!</string>
    <string name="how_to_dialog_03">아침\n<b>07:00</b></string>
    <string name="how_to_dialog_04">점심\n<b>12:00</b></string>
    <string name="how_to_dialog_05">저녁\n<b>06:00</b></string>
    <string name="how_to_dialog_06">출근길, 퇴근길 또는 등교길, 하교길!</string>
    <string name="how_to_dialog_07">어느장소에서도 간편하고 간단하게 공부해요!</string>
    <string name="how_to_dialog_08">많은 이용과 사랑 부탁 드려요. :-)</string>

    <string name="voice_set_title">영어 읽어주는 목소리 설정</string>
    <string name="voice_set_01">설정으로 들어가서 접근성을 선택해 주세요!</string>
    <string name="voice_set_02">글자 읽어주기 또는 TTS 를 선택해 주세요!</string>
    <string name="voice_set_03">엔진을 선택!</string>
    <string name="voice_set_04">Google TTS 엔진 선택!</string>
    <string name="voice_set_05">언어를 클릭 후, 영어(미국) 선택 하면 끝!</string>

    <string name="s8_set">갤럭시s8 설정화면을 사용했습니다.\n설정하다가 모르시면 메일 주세요!\n상세히 알려드리겠습니다.</string>


    2145 3594 5342 2818

</resources>
