<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="1dp">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="1dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/app_main"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:id="@+id/hello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="3dp"
                android:text="@string/hello"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="7dp"
                android:layout_toRightOf="@+id/hello"
                android:text="@string/how_to_title"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:src="@color/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_01"
                    android:layout_width="3dp"
                    android:layout_height="3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="7dp"
                    android:src="@color/tomato" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/img_01"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/how_to_dialog_01"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp"
                        android:textStyle="normal" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_02"
                    android:layout_width="3dp"
                    android:layout_height="3dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="7dp"
                    android:src="@color/tomato" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/img_02"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/how_to_dialog_02"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp"
                        android:textStyle="normal" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_09"
                    android:layout_width="3dp"
                    android:layout_height="3dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="7dp"
                    android:src="@color/tomato" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/img_09"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dialog_09"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/how_to_dialog_09"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/dialog_09"
                        android:layout_marginLeft="3dp"
                        android:text="@string/how_to_dialog_10"
                        android:textColor="@color/gray"
                        android:textSize="10sp"
                        android:textStyle="normal" />

                </RelativeLayout>
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_11"
                    android:layout_width="3dp"
                    android:layout_height="3dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="7dp"
                    android:src="@color/tomato" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/img_11"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/dialog_11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/how_to_dialog_11"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/dialog_11"
                        android:layout_marginLeft="3dp"
                        android:text="@string/how_to_dialog_12"
                        android:textColor="@color/gray"
                        android:textSize="10sp"
                        android:textStyle="normal" />
                </RelativeLayout>
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="새로운 영어 노출 시간"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@+id/start01"
                        android:layout_weight="1"
                        android:background="@drawable/shape_line_gray"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="@string/how_to_dialog_03"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2dp"
                        android:layout_marginRight="2dp"
                        android:layout_toRightOf="@+id/start02"
                        android:layout_weight="1"
                        android:background="@drawable/shape_line_gray"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="@string/how_to_dialog_04"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/start03"
                        android:layout_weight="1"
                        android:background="@drawable/shape_line_gray"
                        android:gravity="center"
                        android:padding="7dp"
                        android:text="@string/how_to_dialog_05"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_03"
                    android:layout_width="3dp"
                    android:layout_height="3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:src="@color/tomato" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/img_03"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/how_to_dialog_06"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp"
                        android:textStyle="normal" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_04"
                    android:layout_width="3dp"
                    android:layout_height="3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:src="@color/tomato" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/img_04"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/how_to_dialog_07"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp"
                        android:textStyle="normal" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_06"
                    android:layout_width="3dp"
                    android:layout_height="3dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:src="@color/tomato" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/img_06"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:text="@string/how_to_dialog_08"
                        android:textColor="@color/dark_gray"
                        android:textSize="14sp"
                        android:textStyle="normal" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_02_sel"
            android:gravity="center"
            android:text="확인"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>